@@ -3,6 +3,8 @@ Revision history for Perl extension Alien::Lightbox.
     - added POD coverage tests
     - now depends on Alien::scriptaculous, instead of using the version that
       came bundled with Lightbox2.
+    - fixed dependency on Archive::Zip; its a -build- dependency, not a
+      -configuration- dependency.
 
 2.03.3.1    Sun Sep 30 13:20 PDT 2007
     - add POD docs to Alien::Lightbox
